<!--
  ~ Copyright 2018 Soojeong Shin
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="app_name">XYZ Reader</string>
    <string name="welcome_xyz_reader">Welcome to XYZ Reader!</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <string name="up">Up</string>
    <!-- Label and Content description for Settings -->
    <string name="settings">Settings</string>

    <!-- Content description for the ImageView -->
    <string name="reading_content_description">Reading image</string>

    <!-- Transition name -->
    <string name="transition_photo">transition_photo</string>

    <!-- Text to share-->
    <string name="share_text_by">&#160;by&#160;</string>

    <!-- Snackbar message -->
    <string name="snackbar_online">Connected to the Internet</string>
    <string name="snackbar_offline">You\'re offline. Check your connection!</string>
    <string name="snackbar_action_retry">RETRY</string>
    
    <!-- - - - - - - - - - - - - - - - - - 
      - Used by XYZReaderPreferences -
      - - - - - - - - - - - - - - - - - - -->
    
    <!-- Label for the page animation preference -->
    <string name="pref_page_animation_label">Page Animation</string>

    <!-- Key name for the page animation -->
    <string name="pref_page_animation_key" translatable="false">page_animation</string>

    <!-- Default value for the page animation preference -->
    <string name="pref_page_animation_default" translatable="false">pop</string>

    <!-- Label for pop transformation option in page animation preference -->
    <string name="pref_page_animation_label_pop">Pop </string>
    <!-- Label for zoom out transformation option in page animation preference -->
    <string name="pref_page_animation_label_zoom">Zoom</string>
    <!-- Label for depth transformation option in page animation preference -->
    <string name="pref_page_animation_label_depth">Depth</string>
    <!-- Label for cube out transformation option in page animation preference -->
    <string name="pref_page_animation_label_cube">Cube</string>

    <!-- Value in SharedPreferences for pop option -->
    <string name="pref_page_animation_pop" translatable="false">pop</string>
    <!-- Value in SharedPreferences for zoom option -->
    <string name="pref_page_animation_zoom" translatable="false">zoom</string>
    <!-- Value in SharedPreferences for depth option -->
    <string name="pref_page_animation_depth" translatable="false">depth</string>
    <!-- Value in SharedPreferences for cube option -->
    <string name="pref_page_animation_cube" translatable="false">cube</string>


    <!-- Label for the text size preference -->
    <string name="pref_text_size_label">Text Size</string>

    <!-- Key name for the text size -->
    <string name="pref_text_size_key" translatable="false">text_size</string>

    <!-- Default value for the text size preference -->
    <string name="pref_text_size_default" translatable="false">@string/pref_text_size_medium</string>

    <!-- Label for small size option in text size preference -->
    <string name="pref_text_size_label_small">Small</string>
    <!-- Label for medium size option in text size preference -->
    <string name="pref_text_size_label_medium">Medium</string>
    <!-- Label for large size option in text size preference -->
    <string name="pref_text_size_label_large">Large</string>
    <!-- Label for extra large size option in text size preference -->
    <string name="pref_text_size_label_extra_large">Extra Large</string>

    <!-- Value in SharedPreferences for small size option -->
    <string name="pref_text_size_small" translatable="false">small</string>
    <!-- Value in SharedPreferences for medium size option -->
    <string name="pref_text_size_medium" translatable="false">medium</string>
    <!-- Value in SharedPreferences for large size option -->
    <string name="pref_text_size_large" translatable="false">large</string>
    <!-- Value in SharedPreferences for large size option -->
    <string name="pref_text_size_extra_large" translatable="false">extra_large</string>
</resources>
